2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_get_host_key): Use ssh_get_pubkey() to be
	compatible with older LibSSH versions. Get whole public key.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/xml.c (handle_end_element): Fix unused function parameter warning.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_get_scan): Add scan details parameter.

	* osp/osp.h: Adjust function prototype.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c, nasl/smb_interface_stub.c, nasl/wmi_interface_stub.c: Fix
	unused function parameter warnings.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_auth_info_new)
	(ldap_connect_authenticate, ldap_auth_info_free): Fix unused function
	parameter warnings.

2015-08-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/CMakeLists.txt: Add -Wextra flag.

	* misc/ids_send.c (inject, injectv6), misc/kb_redis.c (select_database)
	(redis2kbitem, redis_get_pattern), misc/network.c (recv_line)
	(my_gnutls_transport_set_lowat_default), misc/openvas_auth.c
	(digest_hex, openvas_authenticate_classic), misc/openvas_logging.c
	(openvas_log_silent), misc/openvas_server.c (client_cert_callback)
	(openvas_server_vsendf_internal, my_gnutls_transport_set_lowat_default),
	misc/pcap.c (get_random_bytes), misc/plugutils.c (host_add_port_proto)
	(scanner_add_port, plug_get_key_sighand_term, plug_get_key_sigchld)
	(sig_term, sig_chld): Fix signedness and unused function parameters
	issues.

2015-08-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/CMakeLists.txt: Add -Wextra flag.

	* omp/omp.c (omp_get_tasks, omp_get_targets), omp/xml.c
	(handle_start_element, handle_end_element, handle_text, handle_error)
	(foreach_print_attribute_format): Fix unused function parameters
	warning.

2015-08-12  Timo Pollmeier <timo.pollmeier@greenbone.net>
