@@ -1,5 +1,10 @@
 2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
+	* nasl/nasl_ssh.c (nasl_ssh_connect): Set SSH_OPTIONS_HOSTKEYS value
+	when keytype argument is provided.
+
+2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
 	* nasl/nasl_ssh.c (nasl_ssh_get_host_key): Use ssh_get_pubkey() to be
 	compatible with older LibSSH versions. Get whole public key.
 
